Changelog
---------

1.0b3 (unreleased)
^^^^^^^^^^^^^^^^^^

- Nothing changed yet.


1.0b2 (2012-06-04)
^^^^^^^^^^^^^^^^^^

- Tested for Plone 4.2 compatibility. [hvelarde]

- Dependency package collective.prettydate no longer has a GS profile (fixes
  #3). [hvelarde]

- Fixed package distribution. [hvelarde]


1.0b1 (2012-04-10)
^^^^^^^^^^^^^^^^^^

- Initial release.
