@@ -4,6 +4,9 @@
 *.pyc
 .installed.cfg
 .mr.developer.cfg
+.DS_Store
+include/
+lib/
 bin/
 develop-eggs/
 downloads/
