@@ -1,12 +1,27 @@
 [buildout]
 extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
-    http://good-py.appspot.com/release/five.grok/1.2.0-1
+    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.2.x.cfg
 
 package-name = collective.twitter.portlets
 package-extras = [test]
 
-parts += omelette
+parts += omelette releaser
+
+[instance]
+eggs +=
+    Pillow
+    ${buildout:package-name}
+    sauna.reload
+    iw.debug
+
+zcml =
+    iw.debug
+
+zope-conf-additional = %import sauna.reload
+
+[releaser]
+recipe = zc.recipe.egg
+eggs = zest.releaser
 
 [omelette]
 recipe = collective.recipe.omelette
