@@ -4,15 +4,12 @@
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:i18n="http://namespaces.zope.org/i18n"
-    xmlns:grok="http://namespaces.zope.org/grok"
     i18n_domain="collective.twitter.portlets">
 
     <five:registerPackage package="." />
 
     <includeDependencies package="." />
     <i18n:registerTranslations directory="locales" />
-    
-    <grok:grok package="." />
 
     <include file="portlets.zcml" />
 
@@ -26,7 +23,7 @@
 
     <genericsetup:registerProfile
        name="initial"
-       title="collective.twitter.portlets"
+       title="collective.twitter.portlets Initial"
        directory="profiles/initial"
        description="Installs the collective.twitter.portlets package (Initial setup)"
        provides="Products.GenericSetup.interfaces.EXTENSION"
@@ -34,11 +31,22 @@
 
     <genericsetup:registerProfile
         name="uninstall"
-        title="collective.twitter.portlets uninstall"
+        title="collective.twitter.portlets Uninstall"
         directory="profiles/uninstall"
         description="Uninstall profile for the collective.twitter.portlets package."
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
 
+    <genericsetup:importStep
+        name="collective.twitter.portlets-importVarious"
+        title="Import various for the initial profile for collective.twitter.portlets"
+        description="Import various for the initial profile for collective.twitter.portlets"
+        handler="collective.twitter.portlets.setuphandlers.import_various">
+    </genericsetup:importStep>
+
+    <browser:resourceDirectory 
+        name="collective.twitter.portlets"
+        directory="static"
+        /> 
 
 </configure>
