@@ -4,7 +4,9 @@ Changelog
 1.0b3 (unreleased)
 ^^^^^^^^^^^^^^^^^^
 
-- Nothing changed yet.
+- Removed grok [frapell]
+
+- Made the initial profile to be executed by the default if it wasn't executed yet [frapell]
 
 
 1.0b2 (2012-06-04)
